{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "f7f4c19a-302e-4c76-ad78-58d1a5da09f5",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "5c501ab7-4143-43d2-aa47-84ff272e2547",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPressed",
                    "type": "PassThrough",
                    "id": "6b24b93f-13a9-42db-87f0-62150f825248",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "19c3ac37-ef42-490b-b325-b2844ceb6caf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1bda6926-5512-4077-919c-a177f41e3a86",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c9bb30b-c27b-4436-a885-4bf46f51e8dc",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80d6c459-67e1-44e4-840d-0506c4691907",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}